fixed mobile layout bugs

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -15,6 +15,11 @@
   font-size: 22px;
   font-weight: thin;
 }
+@media (max-width: 600px) {
+  .container {
+    margin: 0;
+  }
+}
 .container a {
   color: white;
   box-shadow: inset 0 -5px 0 0 #65dbff;
@@ -52,6 +57,11 @@
   align-items: flex-end;
   margin-bottom: 0;
 }
+@media (max-width: 600px) {
+  .nav {
+    flex-direction: column;
+  }
+}
 .nav ul {
   margin: 0;
   padding: 0;
@@ -83,6 +93,11 @@
   margin-bottom: 0 !important;
   font-size: 40px;
 }
+@media (max-width: 600px) {
+  .container .nav h1 {
+    font-size: 32px;
+  }
+}
 .nav h1 a {
   text-decoration: none;
   box-shadow: inset 0 -0px 0 0 #65dbff;
@@ -110,6 +125,14 @@
   .flexColumn p {
     max-width: none;
   }
+  .flexColumn {
+    padding: 1rem;
+  }
+}
+@media (max-width: 900px) {
+  .flexColumn {
+    padding: 0.5rem;
+  }
 }
 .container h1,
 .container h2,
@@ -123,7 +146,11 @@
 .h1 {
   font-size: 64px;
 }
-
+@media (max-width: 750px) {
+  .container h1 {
+    font-size: 48px;
+  }
+}
 .p {
   margin: 0 0 1.25rem auto;
   line-height: 1.35;
@@ -193,9 +220,14 @@
 }
 
 .headerImage {
-  min-width: 22rem;
+  min-width: 12rem;
   max-width: 52rem;
   height: auto;
+}
+@media (min-width: 600px) {
+  .headerImage {
+    min-width: 100%;
+  }
 }
 .title {
   font-size: calc(100vw / 8);
@@ -215,6 +247,11 @@
     font-size: calc(1440px / 8);
   }
 }
+@media (max-width: 500px) {
+  .title {
+    margin-right: 0;
+  }
+}
 .marginTop {
   margin-top: 30rem;
 }
@@ -227,6 +264,7 @@
 }
 .blogList a {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: baseline;
   margin: 2rem 0;
@@ -262,6 +300,14 @@
   margin: auto;
   padding: 2rem;
 }
+@media (max-width: 600px) {
+  .post postContent {
+    padding: 1rem;
+  }
+  .blogList a {
+    margin: 1rem 0;
+  }
+}
 .bigNumber {
   font-size: 2em;
   margin-right: 0.25em;
@@ -276,6 +322,7 @@
 .aboutPage ul li a {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin: 2rem 0;
   line-height: 1.35;
 }
